tests/fsharp/typecheck/sigs/neg126.4.7.bsl

neg126.fs(30,32,30,48): typecheck error FS0064: This construct causes code to be less generic than indicated by the type annotations. The type variable 'a has been constrained to be type 'sbyte'.
